src/generated_new/grammar/Synapse_newParser.py
# Generated from grammar/Synapse_new.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Synapse_newParser ( Parser ):

    grammarFileName = "Synapse_new.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "'{'", "'}'", "','", 
                     "':'", "'='", "'['", "']'", "'import'", "'def'", "'try'", 
                     "'catch'", "'let'", "'for'", "'in'", "'if'", "'else'", 
                     "'morph'", "'goal'", "'sample'", "'int'", "'float'", 
                     "'list'", "'string'", "'await'", "<INVALID>", "'or'", 
                     "'and'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
                     "'+'", "'-'", "'*'", "'/'", "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IMPORT", "DEF", 
                      "TRY", "CATCH", "LET", "FOR", "IN", "IF", "ELSE", 
                      "MORPH", "GOAL", "SAMPLE", "INT", "FLOAT", "LIST", 
                      "STRING_TYPE", "AWAIT", "TYPE", "OR", "AND", "EQUAL", 
                      "NOT_EQUAL", "GREATER", "LESS", "GREATER_EQUAL", "LESS_EQUAL", 
                      "PLUS", "MINUS", "MULT", "DIV", "NOT", "ID", "NUMBER", 
                      "STRING", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_importStatement = 2
    RULE_funcStatement = 3
    RULE_tryStatement = 4
    RULE_paramList = 5
    RULE_letStatement = 6
    RULE_assignStatement = 7
    RULE_forStatement = 8
    RULE_ifStatement = 9
    RULE_morphStatement = 10
    RULE_goalStatement = 11
    RULE_exprStatement = 12
    RULE_rule = 13
    RULE_expr = 14
    RULE_orExpr = 15
    RULE_andExpr = 16
    RULE_eqExpr = 17
    RULE_relExpr = 18
    RULE_addExpr = 19
    RULE_mulExpr = 20
    RULE_unaryExpr = 21
    RULE_primary = 22
    RULE_exprList = 23

    ruleNames =  [ "program", "statement", "importStatement", "funcStatement", 
                   "tryStatement", "paramList", "letStatement", "assignStatement", 
                   "forStatement", "ifStatement", "morphStatement", "goalStatement", 
                   "exprStatement", "rule", "expr", "orExpr", "andExpr", 
                   "eqExpr", "relExpr", "addExpr", "mulExpr", "unaryExpr", 
                   "primary", "exprList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    IMPORT=11
    DEF=12
    TRY=13
    CATCH=14
    LET=15
    FOR=16
    IN=17
    IF=18
    ELSE=19
    MORPH=20
    GOAL=21
    SAMPLE=22
    INT=23
    FLOAT=24
    LIST=25
    STRING_TYPE=26
    AWAIT=27
    TYPE=28
    OR=29
    AND=30
    EQUAL=31
    NOT_EQUAL=32
    GREATER=33
    LESS=34
    GREATER_EQUAL=35
    LESS_EQUAL=36
    PLUS=37
    MINUS=38
    MULT=39
    DIV=40
    NOT=41
    ID=42
    NUMBER=43
    STRING=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Synapse_newParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.StatementContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.StatementContext,i)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = Synapse_newParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                self.state = 48
                self.statement()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 54
            self.match(Synapse_newParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.ImportStatementContext,0)


        def funcStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.FuncStatementContext,0)


        def tryStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.TryStatementContext,0)


        def letStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.LetStatementContext,0)


        def assignStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.AssignStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.ForStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.IfStatementContext,0)


        def morphStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.MorphStatementContext,0)


        def goalStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.GoalStatementContext,0)


        def exprStatement(self):
            return self.getTypedRuleContext(Synapse_newParser.ExprStatementContext,0)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = Synapse_newParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 56
                self.importStatement()
                pass

            elif la_ == 2:
                self.state = 57
                self.funcStatement()
                pass

            elif la_ == 3:
                self.state = 58
                self.tryStatement()
                pass

            elif la_ == 4:
                self.state = 59
                self.letStatement()
                pass

            elif la_ == 5:
                self.state = 60
                self.assignStatement()
                pass

            elif la_ == 6:
                self.state = 61
                self.forStatement()
                pass

            elif la_ == 7:
                self.state = 62
                self.ifStatement()
                pass

            elif la_ == 8:
                self.state = 63
                self.morphStatement()
                pass

            elif la_ == 9:
                self.state = 64
                self.goalStatement()
                pass

            elif la_ == 10:
                self.state = 65
                self.exprStatement()
                pass


            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 68
                self.match(Synapse_newParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(Synapse_newParser.IMPORT, 0)

        def ID(self):
            return self.getToken(Synapse_newParser.ID, 0)

        def getRuleIndex(self):
            return Synapse_newParser.RULE_importStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = Synapse_newParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(Synapse_newParser.IMPORT)
            self.state = 72
            self.match(Synapse_newParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(Synapse_newParser.DEF, 0)

        def ID(self):
            return self.getToken(Synapse_newParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(Synapse_newParser.ParamListContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.StatementContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.StatementContext,i)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_funcStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncStatement" ):
                return visitor.visitFuncStatement(self)
            else:
                return visitor.visitChildren(self)




    def funcStatement(self):

        localctx = Synapse_newParser.FuncStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(Synapse_newParser.DEF)
            self.state = 75
            self.match(Synapse_newParser.ID)
            self.state = 76
            self.match(Synapse_newParser.T__1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 77
                self.paramList()


            self.state = 80
            self.match(Synapse_newParser.T__2)
            self.state = 81
            self.match(Synapse_newParser.T__3)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                self.state = 82
                self.statement()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(Synapse_newParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TryStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRY(self):
            return self.getToken(Synapse_newParser.TRY, 0)

        def CATCH(self):
            return self.getToken(Synapse_newParser.CATCH, 0)

        def ID(self):
            return self.getToken(Synapse_newParser.ID, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.StatementContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.StatementContext,i)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_tryStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTryStatement" ):
                return visitor.visitTryStatement(self)
            else:
                return visitor.visitChildren(self)




    def tryStatement(self):

        localctx = Synapse_newParser.TryStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tryStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(Synapse_newParser.TRY)
            self.state = 91
            self.match(Synapse_newParser.T__3)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                self.state = 92
                self.statement()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(Synapse_newParser.T__4)
            self.state = 99
            self.match(Synapse_newParser.CATCH)
            self.state = 100
            self.match(Synapse_newParser.T__1)
            self.state = 101
            self.match(Synapse_newParser.ID)
            self.state = 102
            self.match(Synapse_newParser.T__2)
            self.state = 103
            self.match(Synapse_newParser.T__3)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                self.state = 104
                self.statement()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(Synapse_newParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Synapse_newParser.ID)
            else:
                return self.getToken(Synapse_newParser.ID, i)

        def getRuleIndex(self):
            return Synapse_newParser.RULE_paramList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = Synapse_newParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(Synapse_newParser.ID)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 113
                self.match(Synapse_newParser.T__5)
                self.state = 114
                self.match(Synapse_newParser.ID)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(Synapse_newParser.LET, 0)

        def ID(self):
            return self.getToken(Synapse_newParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(Synapse_newParser.ExprContext,0)


        def TYPE(self):
            return self.getToken(Synapse_newParser.TYPE, 0)

        def getRuleIndex(self):
            return Synapse_newParser.RULE_letStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStatement" ):
                return visitor.visitLetStatement(self)
            else:
                return visitor.visitChildren(self)




    def letStatement(self):

        localctx = Synapse_newParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_letStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(Synapse_newParser.LET)
            self.state = 121
            self.match(Synapse_newParser.ID)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 122
                self.match(Synapse_newParser.T__6)
                self.state = 123
                self.match(Synapse_newParser.TYPE)


            self.state = 126
            self.match(Synapse_newParser.T__7)
            self.state = 127
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.ExprContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.ExprContext,i)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_assignStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStatement" ):
                return visitor.visitAssignStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignStatement(self):

        localctx = Synapse_newParser.AssignStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.expr()
            self.state = 130
            self.match(Synapse_newParser.T__7)
            self.state = 131
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(Synapse_newParser.FOR, 0)

        def ID(self):
            return self.getToken(Synapse_newParser.ID, 0)

        def IN(self):
            return self.getToken(Synapse_newParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(Synapse_newParser.ExprContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.StatementContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.StatementContext,i)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_forStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = Synapse_newParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(Synapse_newParser.FOR)
            self.state = 134
            self.match(Synapse_newParser.ID)
            self.state = 135
            self.match(Synapse_newParser.IN)
            self.state = 136
            self.expr()
            self.state = 137
            self.match(Synapse_newParser.T__3)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                self.state = 138
                self.statement()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.match(Synapse_newParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Synapse_newParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(Synapse_newParser.ExprContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.StatementContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(Synapse_newParser.ELSE, 0)

        def getRuleIndex(self):
            return Synapse_newParser.RULE_ifStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = Synapse_newParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(Synapse_newParser.IF)
            self.state = 147
            self.expr()
            self.state = 148
            self.match(Synapse_newParser.T__3)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                self.state = 149
                self.statement()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(Synapse_newParser.T__4)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 156
                self.match(Synapse_newParser.ELSE)
                self.state = 157
                self.match(Synapse_newParser.T__3)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                    self.state = 158
                    self.statement()
                    self.state = 163
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 164
                self.match(Synapse_newParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MorphStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MORPH(self):
            return self.getToken(Synapse_newParser.MORPH, 0)

        def ID(self):
            return self.getToken(Synapse_newParser.ID, 0)

        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.RuleContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.RuleContext,i)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_morphStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMorphStatement" ):
                return visitor.visitMorphStatement(self)
            else:
                return visitor.visitChildren(self)




    def morphStatement(self):

        localctx = Synapse_newParser.MorphStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_morphStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(Synapse_newParser.MORPH)
            self.state = 168
            self.match(Synapse_newParser.ID)
            self.state = 169
            self.match(Synapse_newParser.T__3)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 170
                self.rule_()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(Synapse_newParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GoalStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOAL(self):
            return self.getToken(Synapse_newParser.GOAL, 0)

        def expr(self):
            return self.getTypedRuleContext(Synapse_newParser.ExprContext,0)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_goalStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoalStatement" ):
                return visitor.visitGoalStatement(self)
            else:
                return visitor.visitChildren(self)




    def goalStatement(self):

        localctx = Synapse_newParser.GoalStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_goalStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(Synapse_newParser.GOAL)
            self.state = 179
            self.match(Synapse_newParser.T__6)
            self.state = 180
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(Synapse_newParser.ExprContext,0)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_exprStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStatement" ):
                return visitor.visitExprStatement(self)
            else:
                return visitor.visitChildren(self)




    def exprStatement(self):

        localctx = Synapse_newParser.ExprStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Synapse_newParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(Synapse_newParser.ExprContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.StatementContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.StatementContext,i)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_rule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule" ):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = Synapse_newParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(Synapse_newParser.IF)
            self.state = 185
            self.expr()
            self.state = 186
            self.match(Synapse_newParser.T__3)
            self.state = 190
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 33260234455556) != 0):
                self.state = 187
                self.statement()
                self.state = 192
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 193
            self.match(Synapse_newParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(Synapse_newParser.OrExprContext,0)


        def getRuleIndex(self):
            return Synapse_newParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = Synapse_newParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.orExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def andExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Synapse_newParser.AndExprContext)
            else:
                return self.getTypedRuleContext(Synapse_newParser.AndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(Synapse_newParser.OR)
            else:
                return self.getToken(Synapse_newParser.OR, i)

        def getRuleIndex(self):
            return Synapse_newParser.RULE_orExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpr" ):
                return visitor.visitOrExpr(self)
            else:
                return visitor.visitChildren(self)




    def orExpr(self):
